NitrOS-9 V3.2.9:

----------------------------------------------------------
2013/01/06 David Ladd
M ChangeLog
M level1/dalpha/makefile

Found that LDSKS label was missing from level1/dalpha/makefile
Corrected this oversite and tested.

----------------------------------------------------------
2013/01/06 David Ladd
M ChangeLog
M level1/modules/dwread.asm
M level1/modules/dwwrite.asm
M level1/modules/dw4read.asm
M level1/modules/dw4write.asm

Robert Gault found a problem related to the H6309-1 not always
functioning as expected.  Changed dwread.asm, dwwrite.asm, dw4read.asm
dw4write.asm to reflect these needed changes and movement of code to
correct locations.

In examining the dwwrite.asm source file found two sections of H6309-1 and
code that were the same.  This might have been root problem of the
compiling problems.  Verified both sections of code were identical before
removing second copy.

----------------------------------------------------------
2013/01/05 David Ladd
M ChangeLog
M level1/coco/makefile
M level1/coco/bootfiles/makefile

Added needed sections to makefile(s) to create a NOS9 L1 Beckeer
boot disk.

----------------------------------------------------------
2013/01/04 David Ladd
List of files changed
M ChangeLog
A scripts/burst

Got the burst script from Boisy that was needed for the web portal
on sourceforge. This script is located in the scripts folder.  Please
keep in mind that you will need to have this burst script on your
sourceforge ssh server account to do the "make nightly".

----------------------------------------------------------
2013/01/03 David Ladd
List of files changed
M ChangeLog
M makefile
M rules.mak

Changed the dw3 format information in the rules.mak to use a single
sided format rather than double sided.  The double sided disk images
were preventing users booting off of the drivewire4 server using the
dw3 and becker boot disks.

Also updated the makefile related to the nightly build to use a